--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,11 +9,39 @@
     <link href="./assets/css/normalize.css" rel="stylesheet">
     <link href="./assets/css/reset.css" rel="stylesheet">
     <link href="./assets/css/style.css" rel="stylesheet">
+    <link href="./assets/css/destaques.css" rel="stylesheet">
 </head>
+
 <body class="app">
     <header class="cabecalho">Cabeçalho</header>
-    <main class="conteudo">Conteúdo</main>
+    <main class="conteudo">
+        <section class="destaques">
+            <div class="destaques__principal caixa">
+                <h3 class="destaques__titulo">Fortnite</h3>
+            </div>
+            <div class="destaques__secundario caixa">
+                <h3 class="destaques__titulo">PUBG</h3>
+            </div>
+            <div class="destaques__secundario caixa">
+                <h3 class="destaques__titulo">Slack</h3>
+            </div>
+            <div class="destaques__secundario caixa">
+                <h3 class="destaques__titulo">Whatsapp</h3>
+            </div>
+            <div class="destaques__secundario caixa">
+                <h3 class="destaques__titulo">CS: GO</h3>
+            </div>
+            <div class="destaques__categorias">
+                <ul class="destaques__categorias___lista">
+                    <li class="destaques__categorias___item">
+                        <a class="destaques__categorias___link" href="#">
+                            <i class="destaques__categorias___icone fab fa-buromobelexperte"></i>
+                        </a>
+                    </li>
+                </ul>
+    </main>
     <footer class="rodape">Rodapé</footer>
     <script src="./assets/js/fontawesome.all.min.js"></script>
 </body>
+
 </html>
